--- a/holywar_rules.yaml
+++ b/holywar_rules.yaml
@@ -1,35 +1,34 @@
----
   - id: 2
     name: Статья 2 ТКЧХ. Об обратной силе статей ТКЧХ ОТМЕНЕННАЯ
     legitimacy: cancelled
     text: >
-      Все изменение в законодательство нашего сообщества вступают
-      в силу сразу после принятия соответствующего решения съездом
-      партии сообщества.
+        Все изменение в законодательство нашего сообщества вступают
+        в силу сразу после принятия соответствующего решения съездом
+        партии сообщества.
 
-      Прим. 1 - ни одна статья не имеет обратной
-      силы, т.е. никто не может быть притянут к ответственности за 
-      нарушение любой из статей не принятой на момент совершения 
-      незаконного на текущий момент деяния.
+        Прим. 1 - ни одна статья не имеет обратной
+        силы, т.е. никто не может быть притянут к ответственности за  нарушение любой
+        из статей не принятой на момент совершения  незаконного на текущий момент
+        деяния.
   - id: 3
     name: Статья 3 ТКХЧ. Об отмене нетоксичных статей ТКЧХ
     text: >
-      Все статьи ТКЧХ, снижающие градус токсичности, не могут быть
-      признаны действительными.
-      
-      Примером является статья 2 ТКЧХ, автоматически отмененная
-      статьёй 3 ТКЧХ.
+        Все статьи ТКЧХ, снижающие градус токсичности, не могут быть
+        признаны действительными.
+
+        Примером является статья 2 ТКЧХ, автоматически отмененная
+        статьёй 3 ТКЧХ.
   - id: 11
     name: Статья 11 ТКЧХ. О закреплениий божественности диктатуры Алекса
     text: >
-      Алекс (@AlexFails) может накладывать вето
-      на любое решения в холиварке.
+        Алекс (@AlexFails) может накладывать вето
+        на любое решения в холиварке.
   - id: 15
     name: Статья 15 ТКЧХ. Съезд с буллинга
     text: >
-      Съезд с буллинга, то есть отказ продолжать буллинг
-      с последующими извинениями — наказывается штрафом в размере
-      4 очков привелегий, либо RO сроком на один час.
+        Съезд с буллинга, то есть отказ продолжать буллинг
+        с последующими извинениями — наказывается штрафом в размере
+        4 очков привелегий, либо RO сроком на один час.
   - id: 26
     name: Статья 26 ТКЧХ. Булла о правах кекспертных
     text: Кексперт всегда прав.
