--- a/holywar_rules.yaml
+++ b/holywar_rules.yaml
@@ -35,3 +35,8 @@
   - id: 27
     name: Статья 27 ТКЧХ. Пояснение к правам кекспертным
     text: Если кексперт неправ смотри статью 26 ТКЧХ.
+  - id: 138
+    name: Статья 138 ТКЧХ. О правах фурри
+    text: Фурри и фуррифилы ограничены в правах. Их единственным правом является получение наказаний согласно ТКЧХ. 
+          
+          Прим. 1. Данная редакция статьи не подлежит исправлению по запросу фуррей и фуррифилов.
