--- a/holywar_rules.yaml
+++ b/holywar_rules.yaml
@@ -37,6 +37,8 @@
     text: Если кексперт неправ смотри статью 26 ТКЧХ.
   - id: 138
     name: Статья 138 ТКЧХ. О правах фурри
-    text: Фурри и фуррифилы ограничены в правах. Их единственным правом является получение наказаний согласно ТКЧХ. 
+    text: >
+        Фурри и фуррифилы ограничены в правах. Их единственным
+        правом является получение наказаний согласно ТКЧХ.
           
           Прим. 1. Данная редакция статьи не подлежит исправлению по запросу фуррей и фуррифилов.
