--- a/holywar_rules.yaml
+++ b/holywar_rules.yaml
@@ -41,4 +41,5 @@
         Фурри и фуррифилы ограничены в правах. Их единственным
         правом является получение наказаний согласно ТКЧХ.
           
-          Прим. 1. Данная редакция статьи не подлежит исправлению по запросу фуррей и фуррифилов.
+        Прим. 1. Данная редакция статьи не подлежит исправлению
+        по запросу фуррей и фуррифилов. 
