Ave Satan, Ave Fails

--- a/holywar_rules.yaml
+++ b/holywar_rules.yaml
@@ -22,6 +22,8 @@
   text: >
       Алекс (@AlexFails) может накладывать вето
       на любое решения в холиварке.
+
+      Ave Satan, the holy Alex Fails deus vult!
 - id: 15
   name: Статья 15 ТКЧХ. Съезд с буллинга
   text: >
