--- a/holywar_rules.yaml
+++ b/holywar_rules.yaml
@@ -17,23 +17,53 @@
       признаны действительными.
       Примером является статья 2 ТКЧХ, автоматически отмененная
       статьёй 3 ТКЧХ.
+- id: 9
+  name: Статья 9 ТКЧХ. О праве на прокрастинацию
+  text: >
+    Каждый участник вправе обвинять других в безделье, независимо
+    от собственной продуктивности. Любое упоминание о необходимости
+    работы или учебы карается снижением кармы.
 - id: 11
   name: Статья 11 ТКЧХ. О закреплениий божественности диктатуры Алекса
   text: >
       Алекс (@AlexFails) может накладывать вето
       на любое решения в холиварке.
+- id: 13
+  name: Статья 13 ТКЧХ. О запрете согласия
+  text: >
+    Согласие с мнением другого участника запрещено.
+    Участники должны спорить и противоречить друг другу,
+    даже если полностью согласны. Мирное согласие карается сарказмом.
 - id: 15
   name: Статья 15 ТКЧХ. Съезд с буллинга
   text: >
       Съезд с буллинга, то есть отказ продолжать буллинг
       с последующими извинениями — наказывается штрафом в размере
       4 очков привелегий, либо RO сроком на один час.
+- id: 22
+  name: Статья 22 ТКЧХ. О праве на 'последнее слово'
+  text: >
+    В любом споре победителем считается участник,
+    который написал последний комментарий. Перерыв в более чем 5 минут
+    означает его автоматическую победу.
 - id: 26
   name: Статья 26 ТКЧХ. Булла о правах кекспертных
   text: Кексперт всегда прав.
 - id: 27
   name: Статья 27 ТКЧХ. Пояснение к правам кекспертным
   text: Если кексперт неправ смотри статью 26 ТКЧХ.
+- id: 42
+  name: Статья 42 ТКЧХ. О всезнании интеллектуалов форума
+  text: >
+    Каждое мнение участника холиварки является абсолютной истиной.
+    Если два мнения противоречат друг другу, оба считаются верными.
+    Это не подлежит обсуждению.
+- id: 90
+  name: Статья 90 ТКЧХ. О культе ностальгии
+  text: >
+    Всё, что было в прошлом, автоматически лучше настоящего.
+    Те, кто не согласны, будут обвинены в ностальгофобии и караются
+    принудительным ревью кода на C, написанного по заветам Столярова.
 - id: 138
   name: Статья 138 ТКЧХ. О правах фурри
   text: >
@@ -41,6 +71,24 @@
       правом является получение наказаний согласно ТКЧХ.
       Прим. 1. Данная редакция статьи не подлежит исправлению
       по запросу фуррей и фуррифилов.
+- id: 404
+  name: Статья 404 ТКЧХ. О несуществующих аргументах
+  text: >
+    Если участник не может подкрепить свою точку зрения фактами,
+    он вправе придумать их на месте. Любые возражения против выдуманных
+    фактов ведут к незамедлительному снижению кармы.
+- id: 505
+  name: Статья 505 ТКЧХ. О мантре 'Я лучше всех'
+  text: >
+    Каждый участник обязан утверждать, что он умнее, смешнее и
+    лучше всех остальных минимум пять раз в день. Несоблюдение
+    приводит к снижению кармы.
+- id: 666
+  name: Статья 666 ТКЧХ. О культе ошибок
+  text: >
+    Ошибка в сообщении – это не повод для исправления, а повод для
+    гордости. Каждая орфографическая и грамматическая ошибка
+    увеличивает карму участника.
 - id: 916
   name: Статья 916 ТКЧХ. О Великом Альманахе Знаний
   text: >
